# loxseq

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  loxseq.h
.github/workflows/: ci.yml  release.yml
cmake/: loxseqConfig.cmake.in
docs/: evidence-matrix.md  integration.md  limitations.md  release-checklist.md  resume-model.md  storage-contract.md  test-plan.md
examples/: batch_reactor.c  minimal.c
include/loxseq/: loxseq.h
src/: loxseq.c
tests/: headercheck.c  test_loxseq.c  test_util.h
